Fixed link and increased contrast of header

--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,7 @@ $purple-link: #5b4f8c;
 $purple-highlight: #7757bc;
 $purplehover-bg: #6341a5;
 $header-bg: #2e2765;
-$lightpurple-text: #c8b5e5;
+$lightpurple-text: #d7c4f4;
 
 // =======================================================================================
 
@@ -202,7 +202,7 @@ body>header {
 
   p {
     text-align: center;
-    font-size: 22px;
+    font-size: 23px;
     padding: 0 0 20px 0;
     color: $lightpurple-text;
   }
